--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ deploy:
     secure: GCfTZxoqpp1tMmslM5MTI13BLv+bvFhZUuhX+dQFbcVYODQKUjnUj9EBF10PJSTpYqm3GnGpxEoQ6RAUVxlH7rBQUFm4czaZPPgCDSZT3B8pszmQkl1aRyvdmXFoKfyNhFUwBUSsoBpM92wp/UrgIZ/CI0jLoIZbCwn4KH02rf8=
   file:
     - 'remark.js'
-    - 'remark.min.js'
+    - 'remark.min.js' -- tested failed
   on:
     tags: true
